--- a/newsletter-templater.html
+++ b/newsletter-templater.html
@@ -16,9 +16,9 @@
 
     .column {
         float: left;
-        width: 48%;
+        width: 49.999%;
         height: 100%;
-        padding: 0 5px 5px 5px;
+        /* padding: 0 5px 5px 5px; */
     }
 
     /* Clear floats after the columns */
@@ -30,9 +30,16 @@
     </style>
 
         <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/codemirror/CodeMirror/master/lib/codemirror.css">
-        <link rel="stylesheet" type="text/css" href="codemirror-5.49.2/theme/ambiance.css">
+        <!-- <link rel="stylesheet" type="text/css" href="codemirror-5.49.2/theme/ambiance.css"> -->
+        <link rel="stylesheet" type="text/css" href="codemirror-5.49.2/theme/yonce.css">
+        <link rel="stylesheet" type="text/css" href="codemirror-5.49.2/addon/fold/foldgutter.css">
+
         <script type="text/javascript" src="codemirror-5.49.2/lib/codemirror.js"></script>
-        <script type="text/javascript" src="https://cdn.rawgit.com/codemirror/CodeMirror/master/mode/xml/xml.js"></script>
+        <script type="text/javascript" src="codemirror-5.49.2/mode/javascript/javascript.js"></script>
+        <script type="text/javascript" src="codemirror-5.49.2/addon/edit/matchbrackets.js"></script>
+        <script type="text/javascript" src="codemirror-5.49.2/addon/fold/foldcode.js"></script>
+        <script type="text/javascript" src="codemirror-5.49.2/addon/fold/foldgutter.js"></script>
+        <script type="text/javascript" src="codemirror-5.49.2/addon/fold/brace-fold.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="mustache.js/mustache.js"></script>
@@ -42,7 +49,35 @@
 <script>
     var template;
     var editor;
+
+    function renderOutput(){
+        try{
+            var data = editor.getValue();
+            var rendered = Mustache.render(template, JSON.parse(data));
+            $('#rendered_output').html(rendered);
+            $('#text_output').val(rendered);
+        }catch(err){
+            $('#rendered_output').html(err);
+        }
+    }
+
     $( document ).ready(function() {
+        editor = CodeMirror.fromTextArea(document.getElementById("editor"), {
+            lineNumbers: true,
+            matchBrackets: true,
+            mode:  {name: "javascript", json: true},
+            foldGutter: true,
+            gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
+            theme: "yonce"
+        });
+
+        editor.setOption("extraKeys", {
+            "Ctrl-S": function(cm) {
+                renderOutput();
+            }
+        });
+
+        editor.setSize(null, "100%");
 
         $.get("input.tmpl", function(resp) {
             template = resp;
@@ -50,48 +85,26 @@
 
         $.get("default.data", function(resp) {
             $("#editor").val(resp);
-            editor = CodeMirror.fromTextArea(document.getElementById("editor"), {
-                lineNumbers: true,
-                mode:  {name: "javascript", json: true},
-                theme: "ambiance"
-            });
-            // editor.setOption("extraKeys", {
-            //     CodeMirror.keyNames.Ctrl-Space: function(cm) {
-            //         alert("AHHHHH");
-            //         // var spaces = Array(cm.getOption("indentUnit") + 1).join(" ");
-            //         // cm.replaceSelection(spaces);
-            //     }
-            //     });
-            editor.setSize(null, "100%");
-
         }, "text");
 
-
         $("#run").click(function(){
-            try{
-                var data = editor.getValue();
-                var rendered = Mustache.render(template, JSON.parse(data));
-                $('#rendered_output').html(rendered);
-                $('#text_output').val(rendered);
-            }catch(err){
-                $('#rendered_output').html(err);
-            }
-            });
+            renderOutput();
+        });
 
     });
 </script>
 
-<div class="row" style="height: 95%">
+<div class="row" style="height: 100%">
     <!-- <div class="column" style="height: 100%"> <textarea style="width: 100%; height: 100%;" id="editor"></textarea> </div> -->
     <div class="column"> <textarea id="editor"></textarea> </div>
 
-    <div class="column"><div style="height: 100%; overflow:scroll" id="rendered_output">Ersetzen klicken</div></div>
+    <div class="column"><div style="height: 100%; width: 100%; overflow-y:scroll" id="rendered_output">Ersetzen klicken</div></div>
 
     <div  style="display: none;"> <textarea id="text_output"></textarea> </div>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="column"><button id="run" type="button">Ersetzen</button></div>
-</div>
+</div> -->
 </body>
 
 </html>
