--- a/newsletter-templater.html
+++ b/newsletter-templater.html
@@ -114,7 +114,7 @@
         }, "text");
 
         $.get("default.data", function(resp) {
-            $("#editor").val(resp);
+            editor.getDoc().setValue(resp);
             renderOutput();
         }, "text");
 
